<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_wallet">

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.joshua.starbucksui.ui.wallet.WalletFragment"
        android:label="@string/title_wallet"
        tools:layout="@layout/fragment_wallet" >

        <action
            android:id="@+id/action_wallet_fragment_to_detail_fragment"
            app:destination="@id/detail_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>

    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.joshua.starbucksui.ui.scan.ScanFragment"
        android:label="@string/title_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_phone"
        android:name="com.joshua.starbucksui.ui.phone.PhoneFragment"
        android:label="@string/title_phone"
        tools:layout="@layout/fragment_phone" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.joshua.starbucksui.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_phone" />

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.joshua.starbucksui.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_phone" />

    <fragment
        android:id="@+id/detail_fragment"
        android:name="com.joshua.starbucksui.ui.detail.DetailFragment"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="KEY_ITEM"
            app:argType="com.joshua.starbucksui.model.vo.RecordItem" />
    </fragment>

</navigation>